--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
 
 html, body {
     margin: 0 0 0 0;
+    height: 100vh;
+    width: 100vw;
 }
 
 #canvas {
     background-color: rgb(4, 4, 4);
     height: 100vh;
-    width: 100vw;
+    width: 100vw; 
 }
