--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     margin: 0 0 0 0;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 #canvas {
@@ -21,6 +22,12 @@ body {
     height: 100vh;
     width: 100vw;
     color: white;
+}
+
+.mass {
+    position: absolute;
+    height: 30px;
+    max-width: 30px;
 }
 
 #stepsTaken {
